--- a/src/componnents/featureMovie.css
+++ b/src/componnents/featureMovie.css
@@ -86,3 +86,33 @@
     font-size: 18px;
     color: #999;
 }
+
+@media screen and (max-width: 760px) {
+    .feature{
+        height: 90vh;
+
+    }
+
+    .feature--name{
+        font-size: 40px;
+    }
+
+    .feature--info{
+        font-size: 16px;
+    }
+
+    .feature--description{
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .watchButton,.myListButton{
+        font-size: 16px;
+    }
+
+    .feature--genres{
+        font-size: 14px;
+    }
+    
+}
