--- a/src/componnents/featureMovie.css
+++ b/src/componnents/featureMovie.css
@@ -7,6 +7,7 @@
     width: inherit;
     height: inherit;
     background: linear-gradient(to top, rgba(0,0,0,0.8) 10% , transparent 90%);
+    z-index: 55;
 }
 
 .feature--horizontal{
@@ -19,12 +20,21 @@
     padding-left: 30px;
     padding-bottom: 150px;
     padding-top: 70px;
+    z-index: 55;
 }
 
+
+.banner{
+    position:absolute ;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
 
 .feature--name{
     font-size: 60px;
     font-weight: bold;
+    z-index: 55;
     margin-top: 15px;
 }
 
@@ -32,20 +42,23 @@
     display: inline-block;
     color: #46d369;
     margin-right: 15px;
+    z-index: 55;
 }
 
 .feature--year{
     display: inline-block;
     margin-right: 15px;
+    z-index: 55;
 }
 
 .feature--seasons{
     display: inline-block;
     margin-right: 15px;
+    z-index: 55;
 }
 
 .feature--description{
-    z-index: 1;
+    z-index: 55;
     margin-top: 15px;
     font-size: 20px;
     color: #999;
@@ -54,6 +67,7 @@
 
 .feature--buttons{
     margin-top: 15px;
+    z-index: 55;
 }
 
 .watchButton,.myListButton{
